# vega

./: .gitignore  AGENTS.md  BUILD.bazel  CHANGELOG.md  Cargo.toml  README.md  WORKSPACE  config.example.yml  deps.edn  docker-compose.yml  project.clj  settings.gradle.kts  ytmusic
.github/workflows/: backend.yaml  backend.ymaml  control-panel.yaml
control-panel/: .eslintignore  .eslintrc.js  README.md  angular.json  karma.conf.js  package-lock.json  package.json
control-panel/pages/: _app.tsx  _document.tsx  index.js  index.tsx
control-panel/src/: Bar.tsx  ConsumptionBoard.tsx  ConsumptionChart.tsx  Dashboard.tsx  IBarProps.ts  IDashboardProps.ts  IDraconicReactorStatusProps.ts  IMessageDisplay.ts  IUseWebsocket.ts  MessageDisplay.tsx  MockDashboard.tsx  MockPowerDashboard.tsx  PowerDashboard.tsx  PowerSourceChart.tsx  PowerSourcePanel.tsx  SiteConsumption.tsx  SiteMap.tsx  draconicReactorMockData.ts  siteMapMockData.ts  switchBoardMockData.ts  theme.ts  useDebuggingConsole.ts  useWebsocket.ts
doc/: intro.md
docs/: lua-script-repository.md  server-architecture.md
resources/migrations/: 1-add-message-commands.down.sql  1-add-message-commands.up.sql  2-add-program-registry-tables.down.sql  2-add-program-registry-tables.up.sql
resources/proto/: debug_console.proto
src/: config.rs  fennel.rs  lib.rs
src/package/: directory.rs  middleware.rs  mod.rs
src/proto/: debug_console.proto
src/test_utils/: mod.rs  temp_dir.rs
src/vega/: BUILD.bazel  core.clj  database.clj  discord.clj  fennel.clj  file.clj  grpc.clj  (+3 more)
tests/: http_repository_test.rs
(+37 files in other folders)
