[package]
name = "vega"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
serde_json = "1"
glob = "0"
thiserror = "1"
anyhow = "1"
dirs = "4" 
md-5 = "0"
crossbeam = "0"
regex = "1"
log = "0"
env_logger = "0"
rand = "0"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

